# tableclasses

./: .gitignore  COVERAGE.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: build.yaml  coverage.yaml  test.yml
scripts/: cov.sh  test.sh
src/tableclasses/: __about__.py  __init__.py  _dc.py  api.py  dc.py  errs.py  types.py
src/tableclasses/arrow/: __init__.py  gen.py  tabled.py
src/tableclasses/base/: __init__.py  errs.py  field.py  tabled.py  utils.py
src/tableclasses/pandas/: __init__.py  gen.py  table.py  tabled.py
tests/: __init__.py  test_arrow.py  test_base.py  test_pandas.py  test_types.py  utils.py
