[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tableclasses"
dynamic = ["version"]
description = 'Dataclasses for tabular data'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "joshua-auchincloss", email = "joshua.auchincloss@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyarrow",
  "beartype"
]

[project.optional-dependencies]
pandas = [
  "pandas"
]

test = [
  "coverage[toml]",
  "pytest",
  "pytest-cov"
]

[project.urls]
Documentation = "https://github.com/joshua-auchincloss/tableclasses#readme"
Issues = "https://github.com/joshua-auchincloss/tableclasses/issues"
Source = "https://github.com/joshua-auchincloss/tableclasses"

[tool.hatch.version]
path = "src/tableclasses/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pandas",
  "pytest",
  "pyarrow",
  "coverage",
  "beartype"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/tableclasses tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # boolean positionals
  "FBT001"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["tableclasses"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"**/__init__.py" = ["F401"]

[tool.coverage.run]
source = ["src"]
parallel = true
omit = [
  "src/tableclasses/__about__.py",
  "*tests*"
]

[tool.coverage.paths]
tableclasses = [
    "*/src/tableclasses/*", 
    "*/tableclasses/src/tableclasses",
]

tests = [
      "tests", 
      "*/tableclasses/tests",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.coverage.html]
directory = "cover"